resilient/tests/it/snapshots/it__diagnostics_snapshots__runtime_unknown_identifier_builtin_typo@runtime_unknown_identifier_builtin_typo.snap
---
source: tests/diagnostics_snapshots.rs
assertion_line: 132
description: "fn main(int _d) {\n    let x = array_revrese([1, 2, 3]);\n    return 0;\n}\nmain(0);\n"
expression: output
---
Error: <tmp>.rs:5:5: Runtime error: Identifier not found: array_revrese — did you mean `array_reverse`?
Runtime error: Identifier not found: array_revrese — did you mean `array_reverse`?
   main(0);
       ^
